--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -16,19 +16,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvWelcomeToDashboard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/txt_welcome_to_dashboard"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp_32"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/btnLogout"
@@ -36,17 +25,156 @@
             android:layout_height="wrap_content"
             android:background="@drawable/ic_btn_login_background"
             android:onClick="@{()->fragment.onClickLogout()}"
-            android:paddingStart="50dp"
-            android:paddingTop="@dimen/dp_10"
-            android:paddingEnd="50dp"
-            android:paddingBottom="@dimen/dp_10"
+            android:padding="@dimen/dp_10"
             android:text="@string/txt_log_out"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_16"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="@dimen/dp_12"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvWelcomeToDashboard" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvTryOutUtils"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnLogout"
+            android:layout_marginTop="@dimen/sp_32"
+            android:layout_marginHorizontal="@dimen/dp_12"
+            android:text="@string/txt_please_try_common_utils_here"
+            android:textColor="@color/dark_royal_blue"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_0"
+            app:layout_constraintTop_toBottomOf="@id/tvTryOutUtils"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="@dimen/dp_12"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/llCheckInternet"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="@dimen/dp_12"
+                android:background="@color/off_white"
+                android:elevation="@dimen/dp_8"
+                android:gravity="center_vertical">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/btnCheckInternet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_btn_login_background"
+                    android:padding="@dimen/dp_10"
+                    android:text="@string/txt_check_internet"
+                    android:onClick="@{()-> fragment.onClickCheckInternet()}"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_16"
+                    android:layout_margin="@dimen/dp_12"/>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvCheckInternet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/txt_check_internet"
+                    android:textSize="@dimen/sp_16"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/llShowToast"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_24"
+                android:background="@color/off_white"
+                android:elevation="@dimen/dp_8"
+                android:gravity="center_vertical">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/btnShowToast"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_btn_login_background"
+                    android:padding="@dimen/dp_10"
+                    android:text="@string/txt_show_toast"
+                    android:onClick="@{()-> fragment.onClickShowToast()}"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_16"
+                    android:layout_margin="@dimen/dp_12"/>
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edToastMessage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/royal_blue"
+                    android:hint="@string/txt_enter_toast_message" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/llLogger"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_24"
+                android:background="@color/off_white"
+                android:elevation="@dimen/dp_8"
+                android:gravity="center_vertical">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edLogMessage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/royal_blue"
+                    android:hint="@string/txt_enter_toast_message" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/btnLogInfo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_btn_login_background"
+                    android:padding="@dimen/dp_10"
+                    android:text="@string/txt_show_toast"
+                    android:onClick="@{()-> fragment.onClickShowToast()}"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_16"
+                    android:layout_margin="@dimen/dp_12"/>
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/btnLogDebug"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_btn_login_background"
+                        android:padding="@dimen/dp_10"
+                        android:text="@string/txt_show_toast"
+                        android:onClick="@{()-> fragment.onClickShowToast()}"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_16"
+                        android:layout_margin="@dimen/dp_12"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
