--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,28 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/splashFragment">
-
-    <fragment
-        android:id="@+id/splashFragment"
-        android:name="com.coditas.example.ui.splash.SplashFragment"
-        android:label="fragment_splash"
-        tools:layout="@layout/fragment_splash">
-
-        <action
-            android:id="@+id/action_splashScreen_to_loginScreen"
-            app:destination="@id/loginFragment"
-            app:popUpTo="@id/splashFragment"
-            app:popUpToInclusive="true" />
-
-        <action
-            android:id="@+id/action_splashScreen_to_dashboardScreen"
-            app:destination="@id/dashboardFragment"
-            app:popUpTo="@id/splashFragment"
-            app:popUpToInclusive="true" />
-
-    </fragment>
-
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/loginFragment"
